--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
+    "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "express": "^4.21.2",
     "lodash": "^4.17.21",
@@ -41,12 +42,12 @@
     "react-dom": "^19.0.0",
     "react-router": "^7.2.0",
     "react-router-dom": "^7.2.0",
-    "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.10"
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/css-modules": "^1.0.5",
+    "@types/d3": "^7.4.3",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.15.32",
@@ -55,6 +56,7 @@
     "@typescript-eslint/eslint-plugin": "^8.24.1",
     "@typescript-eslint/parser": "^8.24.1",
     "@vitejs/plugin-react-swc": "^3.8.0",
+    "autoprefixer": "^10.4.21",
     "concurrently": "^9.1.2",
     "dotenv": "^16.4.7",
     "eslint-config-prettier": "^10.0.1",
@@ -63,8 +65,10 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "nodemon": "^3.1.9",
+    "postcss": "^8.5.6",
     "prettier": "^3.5.1",
     "rimraf": "^6.0.1",
+    "tailwindcss": "^4.1.10",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "tw-animate-css": "^1.3.4",
