--- a/.github/workflows/compile.yaml
+++ b/.github/workflows/compile.yaml
@@ -19,5 +19,5 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Run linter
+      - name: Run Compiler
         run: npm run tsc
