--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,7 +17,7 @@ jobs:
           node-version: "22.13.0"
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
-      - name: Run linter
+      - name: Run Tests
         run: npm run test
