--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-dom": "^19.0.0",
     "react-router": "^7.2.0",
     "react-router-dom": "^7.2.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "three": "^0.177.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
@@ -53,6 +54,7 @@
     "@types/node": "^22.15.32",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/three": "^0.177.0",
     "@typescript-eslint/eslint-plugin": "^8.24.1",
     "@typescript-eslint/parser": "^8.24.1",
     "@vitejs/plugin-react-swc": "^3.8.0",
