--- a/package.json
+++ b/package.json
@@ -77,10 +77,12 @@
     "prettier": "^3.5.1",
     "rimraf": "^6.0.1",
     "tailwindcss": "^4.1.10",
+    "text-encoding": "^0.7.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "tw-animate-css": "^1.3.4",
     "typescript": "5.7.3",
+    "util": "^0.12.5",
     "vite": "^6.1.1",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-pages": "^0.32.5",
